[gd_scene load_steps=4 format=3 uid="uid://b54ms70wtbbo1"]

[ext_resource type="Script" uid="uid://gg0bhcl7dfsc" path="res://scenes/interactions/interacting_component.gd" id="1_tpfe0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sil8h"]

[sub_resource type="LabelSettings" id="LabelSettings_tpfe0"]
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="InteractingComponent" type="Node2D"]
script = ExtResource("1_tpfe0")

[node name="InteractRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
shape = SubResource("CircleShape2D_sil8h")

[node name="InteractLabel" type="Label" parent="."]
offset_left = -48.999996
offset_top = -23.999998
offset_right = 940.9999
offset_bottom = 205.99998
scale = Vector2(0.1, 0.1)
text = "Press E To Interact!!!!!!!!!!!!!!! ! Elijah said he was doing this so I cant work on anything more than the bed text just for user enjoyment but he will handle it dont worry :D"
label_settings = SubResource("LabelSettings_tpfe0")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="area_entered" from="InteractRange" to="." method="_on_interact_range_area_entered"]
[connection signal="area_exited" from="InteractRange" to="." method="_on_interact_range_area_exited"]
